gradle: support jpackage plugin