@@ -11,7 +11,7 @@ shadowJar {
 }
 
 group 'org.meteorlite'
-version '1.0-SNAPSHOT'
+version '1.0.0'
 
 repositories {
     mavenCentral()
@@ -22,36 +22,22 @@ repositories {
 }
 
 runtime {
-    modules = ['javafx.controls', 'javafx.fxml', 'javafx.swing', 'javafx.graphics', 'javafx.media']
-    launcher {
-        jvmArgs = [
-                "-noverify",
-                "-Dprism.allowhidpi=false",
-                "-Dsun.awt.noerasebackground=true",
-                "--module-path=C:/Program Files/Java/javafx-sdk-11.0.2/lib",
-                "--add-modules=javafx.media",
-                "--add-modules=javafx.fxml",
-                "--add-modules=javafx.swing",
-                "--add-modules=javafx.graphics",
-                "--add-exports=javafx.base/com.sun.javafx=ALL-UNNAMED",
-                "--add-exports=javafx.base/com.sun.javafx.binding=ALL-UNNAMED",
-                "--add-exports=javafx.base/com.sun.javafx.collections=ALL-UNNAMED",
-                "--add-exports=javafx.base/com.sun.javafx.event=ALL-UNNAMED",
-                "--add-exports=javafx.base/com.sun.javafx.logging=ALL-UNNAMED",
-                "--add-exports=javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED",
-                "--add-exports=javafx.graphics/com.sun.javafx.application=ALL-UNNAMED",
-                "--add-exports=javafx.graphics/com.sun.javafx.geom=ALL-UNNAMED",
-                "--add-exports=javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED",
-                "--add-exports=javafx.graphics/com.sun.javafx.scene.layout=ALL-UNNAMED",
-                "--add-exports=javafx.graphics/com.sun.javafx.scene.input=ALL-UNNAMED",
-                "--add-exports=javafx.graphics/com.sun.javafx.scene.text=ALL-UNNAMED",
-                "--add-exports=javafx.graphics/com.sun.javafx.scene.traversal=ALL-UNNAMED",
-                "--add-exports=javafx.graphics/com.sun.javafx.stage=ALL-UNNAMED",
-                "--add-exports=javafx.graphics/com.sun.javafx.tk=ALL-UNNAMED",
-                "--add-exports=javafx.graphics/com.sun.javafx.util=ALL-UNNAMED",
-                "-Dsun.java2d.uiScale=1.0"
-        ]
+    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
+    jpackage {
+        imageOptions += [
+                "--icon", "src/main/resources/MeteorLite.ico"]
+        mainClass = "meteor.MeteorLiteClientLauncher"
+        installerOptions += [
+                "--name", "MeteorLite",
+                "--description", "Open source OSRS toolkit",
+                "--copyright", "2021 MeteorLite",
+                "--vendor", "Null",
+                "--win-per-user-install",
+                "--win-dir-chooser",
+                "--win-menu",
+                "--win-shortcut"]
     }
+
 }
 
 dependencies {
@@ -105,6 +91,15 @@ dependencies {
     annotationProcessor group: 'javax.inject', name: 'javax.inject', version: '1'
     implementation(group : "io.reactivex.rxjava3", name : "rxjava", version : "_")
     implementation group: 'com.google.code.findbugs', name: 'jsr305', version: '_'
+    implementation group: 'org.openjfx', name: 'javafx-controls', version: '11.0.2'
+    implementation group: 'org.openjfx', name: 'javafx-fxml', version: '11.0.2'
+    implementation group: 'org.openjfx', name: 'javafx-swing', version: '11.0.2'
+    implementation group: 'org.openjfx', name: 'javafx-graphics', version: '11.0.2'
+    implementation group: 'org.openjfx', name: 'javafx-media', version: '11.0.2'
+}
+
+application {
+    mainClassName = 'meteor.MeteorLiteClientLauncher'
 }
 
 compileJava.options.encoding = 'UTF-8'
@@ -116,12 +111,6 @@ tasks.withType(JavaCompile) {
 tasks {
     compileJava.dependsOn project(":fernflower").tasks.getByName("decompileInjected")
     compileJava.dependsOn(":runelite-mixins:compileJava")
-}
-
-
-
-application {
-    mainClass.set("meteor.MeteorLiteClientLauncher")
 }
 
 processResources {
@@ -141,9 +130,8 @@ jar {
     }
 }
 
-mainClassName = 'meteor.MeteorLiteClientLauncher'
-
 javafx {
+    version = "11"
     modules = [ 'javafx.controls', 'javafx.fxml', 'javafx.swing', 'javafx.graphics', 'javafx.media']
     applicationDefaultJvmArgs = [
             "-noverify",
@@ -170,8 +158,8 @@ javafx {
             "--add-exports=javafx.graphics/com.sun.javafx.stage=ALL-UNNAMED",
             "--add-exports=javafx.graphics/com.sun.javafx.tk=ALL-UNNAMED",
             "--add-exports=javafx.graphics/com.sun.javafx.util=ALL-UNNAMED",
+            "--add-opens=javafx.graphics/javafx.css=ALL-UNNAMED",
             "-Dsun.java2d.uiScale=1.0"]
-    configuration = "compileOnly"
 }
 
 
